[gd_scene load_steps=3 format=2]

[ext_resource path="res://barHorizontal_green_mid 200.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyHealthBar.gd" type="Script" id=2]

[node name="EnemyHealthBar" type="Control"]
margin_right = 200.0
margin_bottom = 26.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullHealth" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 26.0
value = 100.0
texture_under = ExtResource( 1 )
tint_under = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 25.0
value = 99.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 25.0
value = 100.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
